--- a/ParentsBank/Web.config
+++ b/ParentsBank/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ParentsBank-20160906011944.mdf;Initial Catalog=aspnet-ParentsBank-20160906011944;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Server=sql1.gtt.me;Database=db_36dc92d46c4c48c89d8534a43e8e7b02;User Id=U_36dc92d46c4c48c89d8534a43e8e7b02;Password=pwd_36dc92d46c4c48c89d8534a43e8e7b02" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
