--- a/ParentsBank/ParentsBank.csproj
+++ b/ParentsBank/ParentsBank.csproj
@@ -223,7 +223,10 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Check.PNG" />
+    <Content Include="Content\computer looker 2.jpg" />
     <Content Include="Content\Northern-Lights-Norway.jpg" />
+    <Content Include="Content\ParchmentPaper.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -255,7 +258,6 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
@@ -293,6 +295,7 @@
     <Content Include="Views\WishlistItems\Details.cshtml" />
     <Content Include="Views\WishlistItems\Edit.cshtml" />
     <Content Include="Views\WishlistItems\Index.cshtml" />
+    <Content Include="Views\Home\Resources.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
