--- a/ParentsBank/ParentsBank.csproj
+++ b/ParentsBank/ParentsBank.csproj
@@ -225,6 +225,9 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Check.PNG" />
     <Content Include="Content\computer looker 2.jpg" />
+    <Content Include="Content\Credit.jpg" />
+    <Content Include="Content\FX.jpg" />
+    <Content Include="Content\Investment.png" />
     <Content Include="Content\Northern-Lights-Norway.jpg" />
     <Content Include="Content\ParchmentPaper.jpg" />
     <Content Include="favicon.ico" />
@@ -258,7 +261,6 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
     <Content Include="Views\Account\ConfirmEmail.cshtml" />
